fix: fix footer displaying, sliders z-index and separate category config from ui

--- a/src/app/styles/variables.scss
+++ b/src/app/styles/variables.scss
@@ -13,7 +13,7 @@
   --color-main: #000;
   --color-second: #e50914;
   --color-white: #fff;
-  --color-gray-100: hsl(0deg 0% 100% / 60%);
+  --color-gray-100: #1c1c1f;
   --color-gray-200: #2a2a2e;
   --color-gray-300: #1c1c1f;
   --color-gray-900: hsl(0deg 0% 100% / 60%);
@@ -28,7 +28,7 @@
   --rounded-full: 100%;
 
   // z-index
-  --header-z-index: 100;
+  --header-z-index: 1000;
   --select-z-index: 50;
   --drawer-z-index: 150;
   --filters-z-index: 125;
